objects/vlocity_cmt__VlocityWebTrackingEventType__c.object
<CustomObject>
    <description>VlocityWebTrackingEventType enables a technical admin to specify a javascript fragment that will call the tracker API when the event fires. It uses substitution variables to represent dynamic parts of the payload.</description>
    <fields>
        <fullName>vlocity_cmt__ComponentType__c</fullName>
        <description>The tracking component type to which the event belongs.</description>
        <inlineHelpText>The tracking component type to which the event belongs.</inlineHelpText>
        <label>Component Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omniscript</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EventPayload__c</fullName>
        <description>Javascript fragment calling the tracking api with a particular json payload.</description>
        <inlineHelpText>Javascript fragment calling the tracking api with a particular json payload.</inlineHelpText>
        <label>Event Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Data pack support.</description>
        <externalId>true</externalId>
        <label>GlobalKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InclusionRule__c</fullName>
        <description>Expression that evaluates to true or false. If not blank or null, the expression is evaluated and if true event is tracked, if false then the event is not tracked.</description>
        <inlineHelpText>Expression that evaluates to true or false. If not blank or null, the expression is evaluated and if true event is tracked, if false then the event is not tracked.</inlineHelpText>
        <label>Inclusion Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityWebTrackingConfigurationId__c</fullName>
        <description>Parent Web Tracking Configuration.</description>
        <inlineHelpText>Parent Web Tracking Configuration.</inlineHelpText>
        <label>Vlocity Web Tracking Configuration</label>
        <referenceTo>vlocity_cmt__VlocityWebTrackingConfiguration__c</referenceTo>
        <relationshipLabel>Vlocity Web Tracking Event Types</relationshipLabel>
        <relationshipName>VlocityWebTrackingEventTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Web Tracking Event Type</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Web Tracking Event Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>